Fix Ref Bug (#)

--- a/leaderboard.html
+++ b/leaderboard.html
@@ -66,9 +66,9 @@
       <div class="collapse navbar-collapse" id="navbarNavAltMarkup">
         <div class="navbar-nav">
           <a id='home_ref' class="nav-item nav-link " href="#">Home <span class="sr-only">(current)</span></a>
-          <a id='rules_ref' class="nav-item nav-link " href="/rules">Rules</a>
-          <a id='bet_ref' class="nav-item nav-link" href="/bet">Play</a>
-          <a id='leaderboard_ref' class="nav-item nav-link active" href="/leaderboard">Leaderboard</a>
+          <a id='rules_ref' class="nav-item nav-link " href="#">Rules</a>
+          <a id='bet_ref' class="nav-item nav-link" href="#">Play</a>
+          <a id='leaderboard_ref' class="nav-item nav-link active" href="#">Leaderboard</a>
         </div>
       </div>
     </nav>
