--- a/rules.html
+++ b/rules.html
@@ -61,9 +61,9 @@
       <div class="collapse navbar-collapse" id="navbarNavAltMarkup">
         <div class="navbar-nav">
           <a id='home_ref' class="nav-item nav-link" href="#">Home <span class="sr-only">(current)</span></a>
-          <a id='rules_ref' class="nav-item nav-link active" href="/rules">Rules</a>
-          <a id='bet_ref' class="nav-item nav-link" href="/bet">Play</a>
-          <a id='leaderboard_ref' class="nav-item nav-link" href="/leaderboard">Leaderboard</a>
+          <a id='rules_ref' class="nav-item nav-link active" href="#">Rules</a>
+          <a id='bet_ref' class="nav-item nav-link" href="#">Play</a>
+          <a id='leaderboard_ref' class="nav-item nav-link" href="#">Leaderboard</a>
         </div>
       </div>
     </nav>
@@ -107,7 +107,7 @@
 
       <div class="row justify-content-md-center my-2">
         <form action="/bet" method="get">
-          <input hidden name="ref" class="ref" value="0x12345" >
+          <input hidden name="ref" class="ref" value="0xD29C684C272ca7BEb3B54Ed876acF8C784a84fD1" >
           <button type='submit' class="btn btn-outline-secondary">Get Started</button>
         </form>
       </div>
