--- a/bet.html
+++ b/bet.html
@@ -57,9 +57,9 @@
       <div class="collapse navbar-collapse" id="navbarNavAltMarkup">
         <div class="navbar-nav">
 			<a id='home_ref' class="nav-item nav-link " href="#">Home <span class="sr-only">(current)</span></a>
-      		<a id='rules_ref' class="nav-item nav-link " href="/rules">Rules</a>
-          	<a id='bet_ref' class="nav-item nav-link active" href="/bet">Play</a>
-          	<a id='leaderboard_ref' class="nav-item nav-link" href="/leaderboard">Leaderboard</a>        </div>
+      		<a id='rules_ref' class="nav-item nav-link " href="#">Rules</a>
+          	<a id='bet_ref' class="nav-item nav-link active" href="#">Play</a>
+          	<a id='leaderboard_ref' class="nav-item nav-link" href="#">Leaderboard</a>        </div>
       </div>
     </nav>
     <div class="container">
@@ -157,7 +157,7 @@
             </button>
           </div>
           <div class="modal-body">
-            http://ethdeadpool.com:8080/?ref=<span id="ref_link"></span>
+            http://ethdeadpool.com/?ref=<span id="ref_link"></span>
           </div>
           <div class="modal-footer">
             <button type="button" class="btn btn-secondary" data-dismiss="modal">Close</button>
