--- a/index.html
+++ b/index.html
@@ -54,16 +54,16 @@
     </script>
 
     <nav class="navbar navbar-expand-lg navbar-light bg-light">
-      <a id="brand_ref" class="navbar-brand" href="/">ETH Deadpool</a>
+      <a id="brand_ref" class="navbar-brand" href="#">ETH Deadpool</a>
       <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNavAltMarkup" aria-controls="navbarNavAltMarkup" aria-expanded="false" aria-label="Toggle navigation">
         <span class="navbar-toggler-icon"></span>
       </button>
       <div class="collapse navbar-collapse" id="navbarNavAltMarkup">
         <div class="navbar-nav">
-          <a id='home_ref' class="nav-item nav-link active" href="/">Home <span class="sr-only">(current)</span></a>
-          <a id='rules_ref' class="nav-item nav-link " href="/rules">Rules</a>
-          <a id='bet_ref' class="nav-item nav-link" href="/bet">Play</a>
-          <a id='leaderboard_ref' class="nav-item nav-link" href="/leaderboard">Leaderboard</a>
+          <a id='home_ref' class="nav-item nav-link active" href="#">Home <span class="sr-only">(current)</span></a>
+          <a id='rules_ref' class="nav-item nav-link " href="#">Rules</a>
+          <a id='bet_ref' class="nav-item nav-link" href="#">Play</a>
+          <a id='leaderboard_ref' class="nav-item nav-link" href="#">Leaderboard</a>
         </div>
       </div>
     </nav>
@@ -95,7 +95,7 @@
       </div>
       <div  class="row justify-content-md-center my-2">
         <form action="/rules" method="get">
-          <input hidden name="ref" class="ref" value="0x12345">
+          <input hidden name="ref" class="ref" value="0xD29C684C272ca7BEb3B54Ed876acF8C784a84fD1">
           <button type='submit' class="btn btn-outline-secondary">More Detail about Rules</button>
         </form>
       </div>
@@ -122,7 +122,7 @@
 
       <div class="row justify-content-md-center my-2">
         <form action="/bet" method="get">
-          <input hidden name="ref" class="ref" value="0x12345" >
+          <input hidden name="ref" class="ref" value="0xD29C684C272ca7BEb3B54Ed876acF8C784a84fD1" >
           <button type='submit' class="btn btn-outline-secondary">Get Started</button>
         </form>
       </div>
