--- a/bet.html
+++ b/bet.html
@@ -98,7 +98,7 @@
           <div class="col-sm-4 justify-content-md-center" style="text-align:center">
             <h4> Referrals </h4>
 			         <div class="row justify-content-md-center my-2">
-               <p>You are referred by <span id="referral"></span></p>
+               <p>You are referred by : <span style="width:70%; word-wrap:break-word; display:inline-block;" id="referral"></span></p>
             </div>
        	    <div class="row justify-content-md-center my-2">
                <p>You Have Invited <span id="count_ref">0</span> Friends</p>
@@ -156,7 +156,7 @@
               <span aria-hidden="true">&times;</span>
             </button>
           </div>
-          <div class="modal-body">
+          <div class="modal-body text-center" >
             http://ethdeadpool.com/?ref=<span id="ref_link"></span>
           </div>
           <div class="modal-footer">
