--- a/bet.html
+++ b/bet.html
@@ -250,7 +250,7 @@
 					    document.getElementById('history').innerHTML = "<p><span id=\"count\">0</span> Bets </p>";
 					    document.getElementById('count').innerHTML = count;
 					    if (!error) {
-					      document.getElementById('response').innerHTML = 'Success: <a target="_blank" href="https://ropsten.etherscan.io/tx/' + result + '"> View Transaction </a>'
+					      document.getElementById('response').innerHTML = 'Success: <a target="_blank" href="https://etherscan.io/tx/' + result + '"> View Transaction </a>'
 					    } else {
 					      document.getElementById('response').innerHTML = '<pre>' + error + '</pre>'
 					    }
