--- a/rules.html
+++ b/rules.html
@@ -101,7 +101,7 @@
           <li> When that big day comes, we(the contract owner) will trigger the <b>announce()</b> function on the smart contract. After the timestamp is announced, we need 100 more players(who had placed at least 1 bet in the contract) to trigger the <b> confirm() </b> function to verify the date. All these 100 players will share 5% of the total rewards.</li>
           <li> The referrals of the winners get 10% of the prize. So invite your friends!
           <li> The top 3 players who placed the most bets will get 4%, 2.5%, 1.5% of the total reward respectively. <a href="#" class="btn btn-link" data-toggle="modal" data-target="#exampleModalCenter">Click here for detail about Reward Distribution</a></li>
-          <li> The source code of the smart contract is available on <a href="https://etherscan.io/address/0x2527767c5328e8fd847f0e21ce2ae5a695a40113#code"> etherscan </a>.
+          <li> The source code of the smart contract is available on <a target="_blank" href="https://etherscan.io/address/0x2527767c5328e8fd847f0e21ce2ae5a695a40113#code"> etherscan </a>.
           <li> Good Luck.</li>
         </div>
       </div>
