--- a/index.html
+++ b/index.html
@@ -136,7 +136,7 @@
       // MetaMask injects the web3 library for us.
       window.onload = function() {
         if (typeof web3 === 'undefined') {
-          document.getElementById('meta-mask-required').innerHTML = 'You need <a href="https://metamask.io/">MetaMask</a> browser plugin to play';
+          document.getElementById('meta-mask-required').innerHTML = 'You need <a href="https://metamask.io/">&nbspMetaMask&nbsp</a> browser plugin to play';
         }
         console.log(web3.eth.coinbase==null)
         if(web3.eth.coinbase==null){
