--- a/index.html
+++ b/index.html
@@ -95,7 +95,7 @@
       </div>
       <div  class="row justify-content-md-center my-2">
         <form action="/rules" method="get">
-          <input hidden name="ref" class="ref" value="0xD29C684C272ca7BEb3B54Ed876acF8C784a84fD1">
+          <input hidden name="ref" class="ref" value="">
           <button type='submit' class="btn btn-outline-secondary">More Detail about Rules</button>
         </form>
       </div>
@@ -122,7 +122,7 @@
 
       <div class="row justify-content-md-center my-2">
         <form action="/bet" method="get">
-          <input hidden name="ref" class="ref" value="0xD29C684C272ca7BEb3B54Ed876acF8C784a84fD1" >
+          <input hidden name="ref" class="ref" value="" >
           <button type='submit' class="btn btn-outline-secondary">Get Started</button>
         </form>
       </div>
