--- a/rules.html
+++ b/rules.html
@@ -109,7 +109,7 @@
 
       <div class="row justify-content-md-center my-2">
         <form action="/bet" method="get">
-          <input hidden name="ref" class="ref" value="0xD29C684C272ca7BEb3B54Ed876acF8C784a84fD1" >
+          <input hidden name="ref" class="ref" value="" >
           <button type='submit' class="btn btn-outline-secondary">Get Started</button>
         </form>
       </div>
